syntax = "proto3";

package cloud.disk_manager;

import "cloud/api/operation/operation.proto";
import "cloud/disk_manager/api/disk.proto";
import "cloud/disk_manager/api/image.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/api;disk_manager";

// Images are stored in global AZ and there's also a pool of base disks in each regional AZ.
// Size of pools are managed automatically, these disks are assigned to a special cloud+folder.
service ImageService {
    // Returns operation with:
    // metadata: CreateImageMetadata
    // response: CreateImageResponse
    rpc Create(CreateImageRequest) returns (.cloud.operation.Operation);

    // Returns operation with:
    // metadata: UpdateImageMetadata
    // response: google.protobuf.Empty
    rpc Update(UpdateImageRequest) returns (.cloud.operation.Operation);

    // Returns operation with:
    // metadata: DeleteImageMetadata
    // response: google.protobuf.Empty
    rpc Delete(DeleteImageRequest) returns (.cloud.operation.Operation);
}

message CreateImageRequest {
    oneof src {
        string src_snapshot_id = 1;
        string src_image_id = 2;
        ImageUrl src_url = 3;
        DiskId src_disk_id = 5;
    }
    string dst_image_id = 6;
    string folder_id = 7;
    string operation_cloud_id = 8;
    string operation_folder_id = 9;
    bool pooled = 10;
}

message CreateImageMetadata {
    double progress = 1;
}

message CreateImageResponse {
    int64 size = 1;
    int64 storage_size = 2;
}

message UpdateImageRequest {
    string image_id = 1;
    bool pooled = 2;
}

message UpdateImageMetadata {
    string image_id = 1;
}

message DeleteImageRequest {
    string image_id = 1;
    string operation_cloud_id = 2;
    string operation_folder_id = 3;
}

message DeleteImageMetadata {
    string image_id = 1;
}
