syntax = "proto3";

package images;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/images/protos";

////////////////////////////////////////////////////////////////////////////////

message DeleteImageRequest {
    reserved 2, 3;

    string ImageId = 1;
}

message DeleteImageTaskState {}
